force-app/main/default/objects/Course__c/fields/Course_Fee__c.field-meta.xml
<CustomField>
    <fullName>Course_Fee__c</fullName>
    <description>Currency for the course fee</description>
    <label>Course Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>