force-app/main/default/objects/Course__c/fields/Duration_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Duration_Weeks__c</fullName>
    <label>Duration_Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>