force-app/main/default/objects/Course__c/validationRules/Fee_Should_be_greater_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Fee_Should_be_greater_than_zero</fullName>
    <active>true</active>
    <description>Course Fee Should not be less than or equal to zero</description>
    <errorConditionFormula>NOT(Course_Fee__c  &gt; 0)</errorConditionFormula>
    <errorMessage>Course Fee Should not be less than or equal to zero</errorMessage>
</ValidationRule>