force-app/main/default/objects/Course__c/listViews/Course.listView-meta.xml
<ListView>
    <fullName>Course</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>Course</label>
</ListView>